tests/fixtures/invalid/str_pow_bool.py
# Cannot power Str and Bool
x: str = "hello" ** True
